/*
해당 파일 수정시 아래 command line 실행

protoc -I=. \
            --go_out . --go_opt paths=source_relative \
            --go-grpc_out . --go-grpc_opt paths=source_relative \
            proto/message/message.proto
*/

syntax = "proto3";
package message;
option go_package = "github.com/gocjf0314/go_project/proto/message";


service MessageService {
    // Insert requested data to database
    rpc InsertData(InsertMsg) returns(InsertReponse) {}

    // Get data from database
    rpc GetData(GetMsg) returns(GetResponse) {}

    // Client request message to server
    rpc RequestMsg(RequestData) returns(ResponseData) {}

    // Client send index data to listner
    rpc SendData(RequestData) returns(ResponseData) {}

    // Listner send index to server then Get Msg
    rpc GetMsgFromDB(ListenerReq) returns(ListenerRes) {}
}

message MessageData {
    int32 index = 1;
    string content = 2;
}

message InsertMsg {
    MessageData message_data = 1;
}

message InsertReponse {
    int32 index = 1;
    string status_code=2;
}

message GetMsg {
    int32 index = 1;
}

message GetResponse {
    MessageData message_data = 1;
}

message RequestData {
    MessageData message_data=1;
}

message ResponseData {
    int32 index=1;
    string status_code=2;
}

message ListenerReq {
    int32 index=1;
}

message ListenerRes {
    MessageData MessageData=1;
}